--- a/extra-conf.ini
+++ b/extra-conf.ini
@@ -1,4 +1,8 @@
+# Aumentado el tamaño max de subida de fichero
 upload_max_filesize = 256M
+# Aumentado el tiempo de revalidación de ficheros en caché para un mejor comportamiento en almacenamiento en red
 opcache.revalidate_freq = 60
+# Aumentado el tamaño de caché
 realpath_cache_size = 8M
+# Aumentado el tiempo que dura el caché
 realpath_cache_ttl = 240
